fix background overflow

--- a/style/main.css
+++ b/style/main.css
@@ -3,7 +3,8 @@
 @import 'footer.css';
 
 @font-face {
-    font-family: 'SuperMarioBros';
+	font-family: 'SuperMarioBros';
+	font-display: swap;
     src: url(../assets/fonts/SuperMarioBros.otf);
 }
 
@@ -22,6 +23,20 @@ body {
 	margin: 0;
 }
 
+button {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+	cursor: pointer;
+	font-size: 1em;
+}
+
+img {
+    max-height: 100%;
+    max-width: 100%;
+}
+
 main {
 	position: relative;
 	margin: 121px auto 0 auto;
@@ -34,9 +49,8 @@ main {
 main::before {
 	content: '';
 	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
+	position: fixed;
+	top: 121px;
 	width: 100vw;
 	max-width: 1280px;
 	height: 700px;
@@ -48,8 +62,14 @@ main::before {
 
 main#home::before {
 	top: unset;
-	bottom: 0;
+	bottom: 138px;
 	background-image: url(../assets/images/background-home.jpg);
+}
+
+.button {
+	background: var(--yellow);
+	border: 2px solid #000;
+	padding: 8px 20px;
 }
 
 .page-content {
@@ -59,24 +79,25 @@ main#home::before {
 	max-width: calc(100% - 20px);
 }
 
-img {
-    max-height: 100%;
-    max-width: 100%;
+@media screen and (max-width: 768px) {
+	main {
+		margin-top: 66px;
+		min-height: calc(100vh - 66px - 138px);
+	}
+
+	main::before {
+		top: 66px;
+	}
 }
 
-button {
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-	cursor: pointer;
-	font-size: 1em;
-}
+@keyframes breath {
+	0% {
+		transform: scale(1);
+	}
 
-.button {
-	background: var(--yellow);
-	border: 2px solid #000;
-	padding: 8px 20px;
+	50% {
+		transform: scale(1.08);
+	}
 }
 
 /****************/
@@ -122,7 +143,7 @@ button {
 	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
-	width: 500px;
+	width: 800px;
 	max-width: calc(100vw - 20px);
 	margin: 0 auto;
 }
@@ -165,21 +186,4 @@ button {
 	display: inline-block;
 	height: 60px;
 	width: 60px;
-}
-
-@media screen and (max-width: 768px) {
-	main {
-		margin-top: 66px;
-		min-height: calc(100vh - 66px - 138px);
-	}
-}
-
-@keyframes breath {
-	0% {
-		transform: scale(1);
-	}
-
-	50% {
-		transform: scale(1.08);
-	}
 }
